--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name=".NotificationService"
+            android:description="gives notification on new rides"
+            android:exported="false"/>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
