--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".NotificationService"
-            android:description="gives notification on new rides"
-            android:exported="false"/>
+
         <activity
+
             android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -27,10 +26,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
+
         <activity
+
             android:name=".DriverActivity"
             android:label="@string/title_activity_driver"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <service android:name=".NotificationService"
+            android:description="@string/service_description" />
     </application>
 
 </manifest>
