--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -19,9 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-
             android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -31,15 +28,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-
         <activity
-
             android:name=".DriverActivity"
             android:label="@string/title_activity_driver"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        </activity>
-        <service android:name=".NotificationService"
+        <service
+            android:name=".NotificationService"
             android:description="@string/service_description" />
 
         <receiver android:name=".MyBroadcastReceiver">
@@ -47,6 +42,8 @@
                 <action android:name="MyBrodcastReceiver" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".MapActivity"></activity>
     </application>
 
 </manifest>
