--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".DriverActivity"
-            android:label="@string/title_activity_driver" />
+            android:label="@string/title_activity_driver"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service
             android:name=".NotificationService"
