--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Launcher">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC8AwyRywpHGrMl3mDUz-d3E1-LOAoIAyA" />
@@ -27,12 +27,12 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.Launcher">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
 
         <activity android:name=".RegisterActivity" />
@@ -51,11 +51,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".MapActivity"
-            android:label="@string/map_activity"
-            >
-
-        </activity>
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/map_activity" />
     </application>
 
 </manifest>
